# dart_wormhole_william

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  pubspec.yaml
.github/workflows/: analyze.yml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/c/: dummy.c  test.c
android/src/main/kotlin/com/example/dart_wormhole_william/: DartWormholeWilliamPlugin.kt
android/src/main/kotlin/com/leastauthority/dart_wormhole_william/: DartWormholeWilliamPlugin.kt
docs/: pull_request_template.md
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/dart_wormhole_william_example/: MainActivity.kt
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
ios/: CMakeLists.txt  clangwrap.sh  dart_wormhole_william.podspec  script_phase.sh
ios/Classes/: DartWormholeWilliamPlugin.swift
lib/: client.dart  dart_wormhole_william.dart
lib/client/: c_structs.dart  client.dart  exceptions.dart  file.dart  file_struct.dart  native_client.dart  native_context.dart
lib/src/: CMakeLists.txt  async_callback.c
linux/: CMakeLists.txt  dart_wormhole_william_plugin.cc
linux/include/dart_wormhole_william/: dart_wormhole_william_plugin.h
macos/: CMakeLists.txt  dart_wormhole_william.podspec
macos/Classes/: DartWormholeWilliamPlugin.swift
test/: client_test.dart  dart_wormhole_william_test.dart
windows/: CMakeLists.txt  dart_wormhole_william_plugin.cpp
windows/include/dart_wormhole_william/: dart_wormhole_william_plugin.h
