set(WORMHOLE_WILLIAM_LIB
    ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libwormhole_william.so)
set(WORMHOLE_WILLIAM_HEADER_DIR
    ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})

if(${CMAKE_HOST_SYSTEM_NAME} STREQUAL "Windows")
  set(EXPORT set)
else()
  set(EXPORT export)
endif()

file(GLOB_RECURSE WORMHOLE_WILLIAM_SRC_FILES ${WORMHOLE_WILLIAM_GO_DIR}/*.go
     ${WORMHOLE_WILLIAM_GO_DIR}/*.c)

configure_file(${WORMHOLE_WILLIAM_GO_DIR}/c/client.h ${WORMHOLE_WILLIAM_HEADER_DIR}/client.h COPYONLY)

add_custom_target(
  BUILD_GO_LIBRARY ALL
  COMMENT Building wormhole_william shared library
  COMMAND
    ${EXPORT} CGO_ENABLED=1&&
    ${EXPORT} GOARCH=${GOARCH}&&
    ${EXPORT} GOOS=${GOOS}&&
    ${EXPORT} CC_FOR_TARGET=${CC_FOR_TARGET}&&
    ${EXPORT} CC=${CC_FOR_TARGET}&&
    go build -buildmode=c-shared -o ${WORMHOLE_WILLIAM_LIB} ./c/
  USES_TERMINAL
  DEPENDS ${WORMHOLE_WILLIAM_SRC_FILES}
  BYPRODUCTS ${WORMHOLE_WILLIAM_LIB}
  WORKING_DIRECTORY ${WORMHOLE_WILLIAM_GO_DIR})

add_library(
  wormhole_william
  SHARED
  IMPORTED
  DEPENDS ${WORMHOLE_WILLIAM_LIB}
  IMPORTED_LOCATION ${WORMHOLE_WILLIAM_LIB}
  GLOBAL)

set_target_properties(
  wormhole_william
  PROPERTIES LINKER_LANGUAGE CXX
             # SOURCES ${WORMHOLE_WILLIAM_SRC_FILES}
             IMPORTED_LOCATION ${WORMHOLE_WILLIAM_LIB}
             GLOBAL TRUE
             ENABLE_EXPORTS TRUE)

target_link_libraries(${PLUGIN_NAME} PUBLIC ${WORMHOLE_WILLIAM_LIB})
